# secunda

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  dump.sql  pyproject.toml  template.env
.github/workflows/: build.yaml
migrations/: env.py
migrations/versions/: 71dcb532c1b1_initial_tables.py
nginx/: Dockerfile  nginx.conf
src/: dto.py  main.py  managers.py  orm.py  utils.py
